Sun Dec 21 18:17:53 1997  Tom Yu  <tlyu@mit.edu>

	* logwtmp.c (ftp_logwtmp): Rename logwtmp to ftp_logwtmp to avoid
	collision with native logwtmp.  Also, return void rather than
	int.

	* ftpd.c: Rename logwtmp to ftp_logwtmp to avoid collision with
	native logwtmp.

Thu Dec 11 23:28:07 1997  Tom Yu  <tlyu@mit.edu>

	* ftpd.c: Don't include netdb.h or sys/socket.h if krb.h is
	included; this works around an Ultrix bug where those headers
	aren't protected against multiple inclusion.

Thu Oct 16 01:23:41 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Change LOCALINCLUDE and the link line to allow for
	krb4 compatibility.

	* ftpd.c: Change KERBEROS to KRB5_KRB4_COMPAT where appropriate.
	(reply): Fix up braces around the check for auth_type ==
	"KERBEROS_V4" so that the nesting of if statements is correct.
	Various and sundry fixes from danw@mit.edu to make it work.

Thu Aug 28 23:48:27 1997  Sam Hartman  <hartmans@luminous.mesas.com>

	* ftpd.c (send_file_list): Flush the data before closing it.

Sun Aug 17 14:24:09 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (SRCS): Add $(srcdir) where needed.

Wed Jul 16 19:03:18 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* ftpd.M: Fix name of srvtab file to be krb5.keytab.

Wed Feb  5 20:34:38 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Tue Nov 12 00:04:00 1996  Tom Yu  <tlyu@mit.edu>

	* ftpd.c (ftpd_userok): Don't undconditionally return -1.

Thu Nov  7 15:38:51 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* ftpd.c (ftpd_userok): Check return value of krb5_init_context()

Thu Oct 17 23:55:32 1996  Mark Eichin  <eichin@cygnus.com>

	* ftpd.c (auth_data): actually exit the for loop if the ftp key
	was ok.

Mon Oct 14 07:54:17 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* ftpd.c (secure_fprintf): Use STDARG routines if
		present. [krb5-appl/108]

Tue Sep 10 14:07:36 1996  Tom Yu  <tlyu@mit.edu>

	* ftpd.M: remove ".so man1/header.doc"
